--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.16.3",
     "lucide-react": "^0.469.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
