--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-label": "^2.1.1",
     "@tabler/icons-react": "^3.28.1",
+    "@tldraw/sync": "^3.7.0",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
@@ -22,6 +23,7 @@
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
