register page and login page

--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.9.4",
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,6 +31,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
