--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0"
   },
