--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
